<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>The path_planning package</description>

  <maintainer email="patrik.knaperek@sgteam.eu">patrik.knaperek</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sgtdv_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>

</package>
